change: nofundsplaceholder to scss modules, fix: title align

--- a/src/components/common/NoFundsPlaceholder/NoFundsPlaceholder.module.scss
+++ b/src/components/common/NoFundsPlaceholder/NoFundsPlaceholder.module.scss
@@ -1,9 +1,13 @@
 @import 'variables.scss';
 
-#no-funds-placeholder {
+.wrapper {
     min-height: 400px;
     @include flex-center-center;
     flex-direction: column;
     font-size: 20px;
     gap: 20px;
+
+    label {
+        text-align: center;
+    }
 }
